@@ -1,4 +1,3 @@
-<br />
 Exits from this map:
 <ul>
 #EXIT#</ul>
