@@ -1,0 +1,3 @@
+Exits leading to this map:
+<ul>
+#EXIT#</ul>
